--- a/pom.xml
+++ b/pom.xml
@@ -88,10 +88,11 @@
             <version>1.3.0</version>
             <scope>provided</scope>
         </dependency>
+        <!-- the correct GAV is referenced in https://bugs.eclipse.org/bugs/show_bug.cgi?id=499019#c19 -->
         <dependency>
-            <groupId>org.eclipse.jdt.core.compiler</groupId>
+            <groupId>org.eclipse.jdt</groupId>
             <artifactId>ecj</artifactId>
-            <version>4.6.1</version>
+            <version>3.13.100</version> <!-- this is the version shipped in Oxygen .2 -->
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
