--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.commons.compiler</artifactId>
-    <version>2.3.5-SNAPSHOT</version>
+    <version>2.3.6</version>
     <packaging>bundle</packaging>
 
     <name>Apache Sling Commons Java Compiler</name>
@@ -41,7 +41,8 @@
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-commons-compiler.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-commons-compiler.git</developerConnection>
         <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-commons-compiler.git</url>
-    </scm>
+      <tag>org.apache.sling.commons.compiler-2.3.6</tag>
+  </scm>
 
     <properties>
         <sling.java.version>7</sling.java.version>
