--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.commons.compiler</artifactId>
-    <version>2.3.7-SNAPSHOT</version>
+    <version>2.4.0</version>
 
     <name>Apache Sling Commons Compiler</name>
     <description>
@@ -40,7 +40,7 @@
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-commons-compiler.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-commons-compiler.git</developerConnection>
         <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-commons-compiler.git</url>
-      <tag>HEAD</tag>
+      <tag>org.apache.sling.commons.compiler-2.4.0</tag>
   </scm>
 
     <build>
