--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-commons-compiler.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-commons-compiler.git</developerConnection>
-        <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-commons-compiler.git</url>
+        <url>https://github.com/apache/sling-org-apache-sling-commons-compiler.git</url>
       <tag>org.apache.sling.commons.compiler-2.4.0</tag>
   </scm>
 
